tests/baselines/reference/instanceQuery-0010.errors.txt
instanceQuery-0010.ts(23,7): error TS1360: Type 'EmptyBase' does not satisfy the expected type 'instanceof EmptyBase & (A & B)'.


==== instanceQuery-0010.ts (1 errors) ====
    namespace iq0010 {
    
        class EmptyBase {}
    
        class APre  extends EmptyBase{
        }
        class A  extends APre {
            a: number = 0;
        }
    
        class BPre  extends EmptyBase{
        }
        class B extends BPre {
            b: number = 0;
        }
    
        declare const x: instanceof A & instanceof B;
    
        x satisfies EmptyBase; // no error
    
        declare const y: EmptyBase;
    
        y satisfies instanceof A & instanceof B; // should error
          ~~~~~~~~~
!!! error TS1360: Type 'EmptyBase' does not satisfy the expected type 'instanceof EmptyBase & (A & B)'.
    }